--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -2,6 +2,26 @@
   background-color: rgb(23, 23, 23);
   padding: 12px 3%;
   margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.portfolio_link{
+  text-decoration: none;
+  font-size: 17px;
+  background-color: rgb(45, 45, 45);
+  border-radius: 8px;
+  color: white;
+  padding: 7px;
+  transition: all;
+  transition-duration: 1s;
+}
+
+.portfolio_link:hover{
+  background-color: rgb(201, 201, 201);
+  color: #0f0f0f;
+
 }
 
 .page-title {
